--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,19 +308,21 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Accordingly, the operation of contraction with <a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent vector fields</a> (def. \ref{ContractionOfFormsWithVectorFields}) has bi-degree <math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo>,</mo><mi>σ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-1,\sigma)</annotation></semantics></math> if the tangent vector has super-degree <math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi></mrow><annotation encoding='application/x-tex'>\sigma</annotation></semantics></math>:</p>
-<table><thead><tr><th>generator</th><th>bi-degree</th></tr></thead><tbody><tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AA</mi></mphantom><msup><mi>x</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\phantom{AA} x^a</annotation></semantics></math></td><td style='text-align: left;'>(0,even)</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AA</mi></mphantom><msup><mi>θ</mi> <mi>α</mi></msup></mrow><annotation encoding='application/x-tex'>\phantom{AA} \theta^\alpha</annotation></semantics></math></td><td style='text-align: left;'>(0,odd)</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AA</mi></mphantom><msup><mi>dx</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\phantom{AA} dx^a</annotation></semantics></math></td><td style='text-align: left;'>(1,even)</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AA</mi></mphantom><mi>d</mi><msup><mi>θ</mi> <mi>α</mi></msup></mrow><annotation encoding='application/x-tex'>\phantom{AA} d\theta^\alpha</annotation></semantics></math></td><td style='text-align: left;'>(1,odd)</td></tr>
-</tbody></table><table><thead><tr><th>derivation</th><th>bi-degree</th></tr></thead><tbody><tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AA</mi></mphantom><mi>d</mi></mrow><annotation encoding='application/x-tex'>\phantom{AA} d</annotation></semantics></math></td><td style='text-align: left;'>(1,even)</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AA</mi></mphantom><msub><mi>ι</mi> <mrow><mo>∂</mo><msup><mi>x</mi> <mi>a</mi></msup></mrow></msub></mrow><annotation encoding='application/x-tex'>\phantom{AA}\iota_{\partial x^a}</annotation></semantics></math></td><td style='text-align: left;'>(-1, even)</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_6dd508d268705e27bda9c9754011fb4f5a8caa17_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AA</mi></mphantom><msub><mi>ι</mi> <mrow><mo>∂</mo><msup><mi>θ</mi> <mi>α</mi></msup></mrow></msub></mrow><annotation encoding='application/x-tex'>\phantom{AA}\iota_{\partial \theta^\alpha}</annotation></semantics></math></td><td style='text-align: left;'>(-1,odd)</td></tr>
-</tbody></table>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_98ad26a27c32d567c08dac74e13b0b5a86129e4b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>{</mo><msub><mi>ψ</mi> <mi>α</mi></msub><mo stretchy='false'>(</mo><mi>t</mi><mo>,</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo>,</mo><msup><mover><mi>ψ</mi><mo>¯</mo></mover> <mi>β</mi></msup><mo stretchy='false'>(</mo><mi>t</mi><mo>,</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo>}</mo></mrow><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><msup><mi>γ</mi> <mn>0</mn></msup><msub><mo stretchy='false'>)</mo> <mi>α</mi></msub><msup><mrow></mrow> <mi>β</mi></msup><mi>δ</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \left\{
+    \psi_\alpha(t,\vec x)
+    ,
+    \overline{\psi}^\beta(t,\vec y)
+  \right\}
+  \;=\;
+  (\gamma^0)_{\alpha}{}^\beta \delta(\vec y - \vec x)
+  \,.
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November  5, 2017 16:48:51 
+  Revised on November  5, 2017 17:18:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
