--- a/pages/18737.html
+++ b/pages/18737.html
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_d89781a8bb941fc32dd2e0cf3570e5da4e8878b5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_161e114ad9ff8a3551b48c63ccead1331a72a330_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -489,7 +489,7 @@ margin-left: 0em;
 
 <p>The CCHM model validates both <a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalence</a> and can be used to model a variety of <a class='existingWikiWord' href='/nlab/show/higher+inductive+type'>HIT</a>s.</p>
 
-<p>One thing to be cautious about is that while it is possible to model the Martin-Löf <a class='existingWikiWord' href='/nlab/show/identity+type'>identity type</a> in both the BCH model nor the CCHM model, it does not coincide with the paths in the model. But it is equivalent to the path types.</p>
+<p>One thing to be cautious about is that while it is possible to model the Martin-Löf <a class='existingWikiWord' href='/nlab/show/identity+type'>identity type</a> in both the BCH model and the CCHM model, it does not coincide with the paths in the model. But it is equivalent to the path types.</p>
 
 <h2 id='references'>References</h2>
 
@@ -503,7 +503,7 @@ margin-left: 0em;
 </li>
 
 <li id='CohenCoquandHuberMoertberg17'>
-<p><span class='newWikiWord'>Cyril Cohen<a href='/nlab/new/Cyril+Cohen'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/Thierry+Coquand'>Thierry Coquand</a>, <a class='existingWikiWord' href='/nlab/show/Simon+Huber'>Simon Huber</a>, <span class='newWikiWord'>Anders Mörtberg<a href='/nlab/new/Anders+M%C3%B6rtberg'>?</a></span>, <em>Cubical Type Theory: a constructive interpretation of the univalence axiom</em> (<a href='https://hal.inria.fr/hal-01378906/document'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Cyril+Cohen'>Cyril Cohen</a>, <a class='existingWikiWord' href='/nlab/show/Thierry+Coquand'>Thierry Coquand</a>, <a class='existingWikiWord' href='/nlab/show/Simon+Huber'>Simon Huber</a>, <a class='existingWikiWord' href='/nlab/show/Anders+M%C3%B6rtberg'>Anders Mörtberg</a>, <em>Cubical Type Theory: a constructive interpretation of the univalence axiom</em> (<a href='https://hal.inria.fr/hal-01378906/document'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -512,14 +512,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 09:57:40 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.234.78)
+  Revised on November  6, 2017 00:39:00 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (138.25.147.125)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cubical+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+type+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/cubical+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cubical+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+type+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/cubical+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
