--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,33 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ca98f5eaf9836c8d265e0a191a53e0b8c698db59_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mo>*</mo></msup><mo>∘</mo><msup><mi>g</mi> <mo>*</mo></msup><mo>=</mo><mo stretchy='false'>(</mo><mi>g</mi><mo>∘</mo><mi>f</mi><msup><mo stretchy='false'>)</mo> <mo>*</mo></msup><mphantom><mi>AAAAAA</mi></mphantom><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><msub><mi>n</mi> <mn>2</mn></msub></mrow></msup><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><msup><mi>f</mi> <mo>*</mo></msup></mrow></mpadded></msup><mo>↙</mo></mtd> <mtd></mtd> <mtd><msup><mo>↖</mo> <mpadded width='0'><mrow><msup><mi>g</mi> <mo>*</mo></msup></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><msub><mi>n</mi> <mn>1</mn></msub></mrow></msup><mo stretchy='false'>)</mo></mtd> <mtd></mtd> <mtd><munder><mo>⟵</mo><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>∘</mo><mi>f</mi><msup><mo stretchy='false'>)</mo> <mo>*</mo></msup></mrow></munder></mtd> <mtd></mtd> <mtd><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mrow><msub><mi>n</mi> <mn>3</mn></msub></mrow></msup><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-     f^\ast \circ g^\ast
-     =
-     (g \circ f)^\ast
-     \phantom{AAAAAA}
-     \array{
-       &amp;&amp; X(\mathbb{R}^{n_2})
-       \\
-       &amp; {}^{\mathllap{f^\ast}}\swarrow &amp;&amp; \nwarrow^{\mathrlap{g^\ast}}
-       \\
-       X(\mathbb{R}^{n_1})
-       &amp;&amp; \underset{ (g \circ f)^\ast }{\longleftarrow} &amp;&amp;
-       X(\mathbb{R}^{n_3})
-     }
-   
-</annotation></semantics></math></div>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>δ</mi><mo>^</mo></mover><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo>=</mo><msub><mo>∫</mo> <mrow><mi>x</mi><mo>∈</mo><mi>ℝ</mi></mrow></msub><mi>δ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>2</mn><mi>π</mi><mi>i</mi><mi>k</mi><mi>x</mi></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>x</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>
+  \widehat {\delta}(k)
+  \;=\;
+  =
+  \int_{x \in \mathbb{R}} \delta(x) e^{- 2\pi i k x} \, d x
+  =
+  1
+
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mover><mover><mi>δ</mi><mo>^</mo></mover><mo>^</mo></mover><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><msub><mo>∫</mo> <mrow><mi>k</mi><mo>∈</mo><mi>ℝ</mi></mrow></msub><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mi>k</mi><mi>x</mi></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>k</mi></mrow><annotation encoding='application/x-tex'>
+  \delta(x)
+  =
+  \widehat{\widehat{\delta}}(-x)
+  =
+  \int_{k \in \mathbb{R}} e^{2 \pi i k x} \, d k
+
+</annotation></semantics></math></div><table><thead><tr><th>aspect</th><th><a class='existingWikiWord' href='/nlab/show/term'>term</a></th><th><a class='existingWikiWord' href='/nlab/show/type'>type</a></th><th>description</th><th>def.</th></tr></thead><tbody><tr><td style='text-align: left;'>field component</td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\phi^a</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow><annotation encoding='application/x-tex'>\phi^a_{,\mu}</annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>J</mi> <mi>Σ</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>J^\infty_\Sigma(E) \to \mathbb{R}</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate function</a> on <a class='existingWikiWord' href='/nlab/show/jet+bundle'>jet bundle</a> of <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></td><td style='text-align: left;'>def. \ref{JetBundleOfTrivialVectorBundleOverMinkowskiSpacetime}</td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/worldvolume'>field history</a></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi></mrow><annotation encoding='application/x-tex'>\Phi</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mrow><mo>∂</mo><mi>Φ</mi></mrow><mrow><mo>∂</mo><msup><mi>x</mi> <mi>μ</mi></msup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>\frac{\partial \Phi}{\partial x^\mu}</annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi><mo>→</mo><msubsup><mi>J</mi> <mi>Σ</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Sigma \to J^\infty_\Sigma(E)</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/jet+prolongation'>jet prolongation</a> of <a class='existingWikiWord' href='/nlab/show/section'>section</a> of <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></td><td style='text-align: left;'>def. \ref{Fields}, def. \ref{JetProlongation}</td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/observable'>field observable</a></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbf{\Phi}^a</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∂</mo> <mi>μ</mi></msub><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\partial_{\mu} \mathbf{\Phi}^a </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_006304d043595ab765347e633dab1e2c9cadb2b5_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Γ</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\Gamma_{\Sigma}(E) \to \mathbb{R}</annotation></semantics></math></td><td style='text-align: left;'>functional on space of sections</td><td style='text-align: left;'>example \ref{PointEvaluationObservables}</td></tr>
+</tbody></table>
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 03:34:20 
+  Revised on November  6, 2017 04:56:53 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1208" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1208 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1209" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1209 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
