--- a/pages/18719.html
+++ b/pages/18719.html
@@ -319,9 +319,13 @@ https://www.studip.uni-goettingen.de/dispatch.php/course/overview?cid=cd3c8d093d
 </li>
 
 <li>
-<p>Kan Complex I (GJ I.3, first three pages) by Laura (09.11.2017)</p>
+<p>Simplicial set (GJ I.1) by Daniel and realization by Laura (09.11.2017)</p>
 </li>
+</ol>
 
+<p>2.5 Kan Complex I by Laura(GJ I.3, first three pages) (16.11.2017)</p>
+
+<ol>
 <li>
 <p>Kan Complex II towards n-groupoids (GJ I.3, the rest of it) by Richard (16.11.2017)</p>
 </li>
@@ -353,14 +357,14 @@ https://www.studip.uni-goettingen.de/dispatch.php/course/overview?cid=cd3c8d093d
 </div>
 
 <div class="revisedby">
-  Revised on October 30, 2017 06:24:48 
+  Revised on November  6, 2017 05:21:28 
   by <a class="existingWikiWord" href="/nlab/show/Chenchang+Zhu">Chenchang Zhu</a>
   (134.76.82.104)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
