--- a/pages/18749.html
+++ b/pages/18749.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      plane wave in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      plane wave
   </h1>
 
 
@@ -308,41 +308,138 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7f1d2dfb6bb29999122e514ec00b248d9e6cc1df_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>δ</mi><mo>^</mo></mover><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo>=</mo><msub><mo>∫</mo> <mrow><mi>x</mi><mo>∈</mo><mi>ℝ</mi></mrow></msub><mi>δ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>2</mn><mi>π</mi><mi>i</mi><mi>k</mi><mi>x</mi></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>x</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>
-  \widehat {\delta}(k)
-  \;=\;
-  =
-  \int_{x \in \mathbb{R}} \delta(x) e^{- 2\pi i k x} \, d x
-  =
-  1
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7f1d2dfb6bb29999122e514ec00b248d9e6cc1df_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mover><mover><mi>δ</mi><mo>^</mo></mover><mo>^</mo></mover><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><msub><mo>∫</mo> <mrow><mi>k</mi><mo>∈</mo><mi>ℝ</mi></mrow></msub><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mi>k</mi><mi>x</mi></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>k</mi></mrow><annotation encoding='application/x-tex'>
-  \delta(x)
-  =
-  \widehat{\widehat{\delta}}(-x)
-  =
-  \int_{k \in \mathbb{R}} e^{2 \pi i k x} \, d k
+<h4 id='harmonic_analysis'>Harmonic analysis</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of a distribution</a></p>
+</li>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+inversion+theorem'>Fourier inversion theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></strong></p>
+
+<ul>
+<li>
+<p><span class='newWikiWord'>wavelet<a href='/nlab/new/wavelet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/curvelet'>curvelet</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/signal+processing'>signal processing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/time+series'>time series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_ec2e21a83077bd9098eee0bd8075f9d1e0170304_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> and write <math class='maruku-mathml' display='inline' id='mathml_ec2e21a83077bd9098eee0bd8075f9d1e0170304_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> for the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_ec2e21a83077bd9098eee0bd8075f9d1e0170304_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>. Then a <em>plane wave</em> on <math class='maruku-mathml' display='inline' id='mathml_ec2e21a83077bd9098eee0bd8075f9d1e0170304_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ec2e21a83077bd9098eee0bd8075f9d1e0170304_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>⟶</mo><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>
+  \mathbb{R}^n \longrightarrow \mathbb{C}
 
 </annotation></semantics></math></div>
+<p>given by the <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential function</a> with <a class='existingWikiWord' href='/nlab/show/complex+number'>complex</a> argument of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ec2e21a83077bd9098eee0bd8075f9d1e0170304_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mspace width='thickmathspace'></mspace><mo>↦</mo><mspace width='thickmathspace'></mspace><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \vec x \;\mapsto\; e^{2 \pi i \vec k \cdot \vec x}
+  \,.
+
+</annotation></semantics></math></div>
+<p>Here <math class='maruku-mathml' display='inline' id='mathml_ec2e21a83077bd9098eee0bd8075f9d1e0170304_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\vec k \in \mathbb{R}^n</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></em> determining this plane wave.</p>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a> over <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a>, the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> expresses every <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>function with rapidly decreasing partial derivatives</a> as a <a class='existingWikiWord' href='/nlab/show/superposition'>superposition</a> of plane waves.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>wave function</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Plane_wave'>Plane wave</a></em></li>
+</ul>
+
+<p>
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 05:18:44 
+  Created on November  6, 2017 05:56:33 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1209" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1209 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/plane+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/plane+wave" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/plane+wave" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/plane+wave" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
