--- a/pages/7936.html
+++ b/pages/7936.html
@@ -500,6 +500,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/wave+function+collapse'>collapse of the wave function</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>duality</a> between <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a> and <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a></strong>:</p>
@@ -517,7 +521,7 @@ margin-left: 0em;
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/factorization+homology'>factorization homology</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/cobordism+hypothesis'>cobordism representation</a></td></tr>
 </tbody></table>
 <p><strong><a class='existingWikiWord' href='/nlab/show/holographic+principle'>holographic principle</a> in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a></strong></p>
-<table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/bulk+field+theory'>bulk field theory</a></th><th><a class='existingWikiWord' href='/nlab/show/boundary+field+theory'>boundary field theory</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_91ae6b926370866391080d8f291d9d7be20b5376_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>n+1</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_91ae6b926370866391080d8f291d9d7be20b5376_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math></td></tr>
+<table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/bulk+field+theory'>bulk field theory</a></th><th><a class='existingWikiWord' href='/nlab/show/boundary+field+theory'>boundary field theory</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_82d4c59e9da966c63ffc842733211597a71da1c1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>n+1</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_82d4c59e9da966c63ffc842733211597a71da1c1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/source+field'>source</a></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>wave function</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/correlator'>correlation function</a></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/conformal+block'>conformal blocks</a></td></tr>
@@ -540,14 +544,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 13, 2015 08:08:41 
+  Revised on November  6, 2017 05:54:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.18)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/space+of+states+%28in+geometric+quantization%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/space+of+states+%28in+geometric+quantization%29/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/space+of+states+%28in+geometric+quantization%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/space+of+states+%28in+geometric+quantization%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/space+of+states+%28in+geometric+quantization%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/space+of+states+%28in+geometric+quantization%29/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/space+of+states+%28in+geometric+quantization%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/space+of+states+%28in+geometric+quantization%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
