--- a/pages/2389.html
+++ b/pages/2389.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -895,6 +895,78 @@ margin-left: 0em;
   <a href='/nlab/edit/physicscontents'>Edit this sidebar</a>
 </p>
 </div></div>
+
+<h4 id='harmonic_analysis'>Harmonic analysis</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave'>wave</a>, <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></p>
+</li>
+</ul>
+
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of a distribution</a></p>
+</li>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+inversion+theorem'>Fourier inversion theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Paley-Wiener-Schwartz+theorem'>Paley-Wiener-Schwartz theorem</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></strong></p>
+
+<ul>
+<li>
+<p><span class='newWikiWord'>wavelet<a href='/nlab/new/wavelet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/curvelet'>curvelet</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/signal+processing'>signal processing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/time+series'>time series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 
@@ -902,9 +974,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/oscillation'>oscillation</a> is a <em>periodic motion of a physical system</em>, i.e. as a function of time, the position of the system of particles expressed as a coordinate in a configuration space depends as <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>↦</mo><mi>x</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>t\mapsto x(t)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>x</mi><mo stretchy='false'>(</mo><mi>t</mi><mo>+</mo><mi>I</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>x(t) = x(t+I)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>I</mi></mrow><annotation encoding='application/x-tex'>I</annotation></semantics></math> is a constant called the period of the motion. The motion can pertain to a system of particles, to the coordinates determining the position of a rigid body or can express the magnitude of some physical quantity like pressure which evolves in time. In a mechanical system, the point in which the potential energy is minimal is called the equlibrium position; the relative position with respect to the equilibrium position is called the <strong>elongation</strong>. The maximal elongation is usually called the <strong>amplitude of oscillation</strong>.</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/oscillation'>oscillation</a> is a <em>periodic motion of a physical system</em>, i.e. as a function of time, the position of the system of particles expressed as a coordinate in a configuration space depends as <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>↦</mo><mi>x</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>t\mapsto x(t)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>x</mi><mo stretchy='false'>(</mo><mi>t</mi><mo>+</mo><mi>I</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>x(t) = x(t+I)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>I</mi></mrow><annotation encoding='application/x-tex'>I</annotation></semantics></math> is a constant called the period of the motion. The motion can pertain to a system of particles, to the coordinates determining the position of a rigid body or can express the magnitude of some physical quantity like pressure which evolves in time. In a mechanical system, the point in which the potential energy is minimal is called the equlibrium position; the relative position with respect to the equilibrium position is called the <strong>elongation</strong>. The maximal elongation is usually called the <strong>amplitude of oscillation</strong>.</p>
 
-<p>A <strong>wave</strong> is the (result of) <em>propagation of oscillations through an extended medium</em>. Examples of extended media are a liquid, the vacuum (where physical fields can propagate, for example the electromagnetic field) or a discrete grid of interacting particles. Many partial differential equations for the mechanics of extended objects have wave solutions. Waves are typically viewed via quantity called <strong>amplitude</strong> which describes the relative position of each particle in a continuum system from its equilibrium position (this conflicts a bit with the terminology on oscillations, where the amplitude would be the maximnal one). The amplitude depends both on the time and the position in space. Most typical wave propagation is of the form <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>vt</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>A(x,t) = f(x-vt)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> is the position, <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi></mrow><annotation encoding='application/x-tex'>v</annotation></semantics></math> is the speed of propagation (which may depend on the direction of propagation, and for inhomogeneous systems on the coordinate) and <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi></mrow><annotation encoding='application/x-tex'>t</annotation></semantics></math> is the time. Partial differential equations (PDE) which have <strong>wave solutions</strong> are typically parabolic or hyperbolic PDEs. Here wave solutions are recognized by their form (variations of the formula <math class='maruku-mathml' display='inline' id='mathml_bfb80e88addf03bae99964d94bf834961ed449ba_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>vt</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f(x-vt)</annotation></semantics></math> from above). Wave solutions can add up together linearly or not; in both cases the phenomenon is called <strong>superposition</strong>. Finite superpositions have many typical features (e.g. Lissajous figures). The superposition can stretch over infinite families of waves, then the sum passes into the integral and many periodic modes add up to something what is not periodic whatsoever, and may be even localized. One then talks about a <strong>wave packet</strong>. A wave packet can from far away look like a point particle. Wave packets can decay (damp) quickly as they propagate and in nonlinear situations can be unstable under collisions with other waves. In simple linear cases, the individual cases in the wave packet correspond to elements of a basis in a Hilbert space of functions, then the expression of a wave packet in terms of basic waves (say plane waves) amount to a case of <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier mode expansion</a>.</p>
+<p>A <strong>wave</strong> is the (result of) <em>propagation of oscillations through an extended medium</em>. Examples of extended media are a liquid, the vacuum (where physical fields can propagate, for example the electromagnetic field) or a discrete grid of interacting particles. Many partial differential equations for the mechanics of extended objects have wave solutions. Waves are typically viewed via quantity called <strong>amplitude</strong> which describes the relative position of each particle in a continuum system from its equilibrium position (this conflicts a bit with the terminology on oscillations, where the amplitude would be the maximnal one). The amplitude depends both on the time and the position in space. Most typical wave propagation is of the form <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>vt</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>A(x,t) = f(x-vt)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> is the position, <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi></mrow><annotation encoding='application/x-tex'>v</annotation></semantics></math> is the speed of propagation (which may depend on the direction of propagation, and for inhomogeneous systems on the coordinate) and <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi></mrow><annotation encoding='application/x-tex'>t</annotation></semantics></math> is the time. Partial differential equations (PDE) which have <strong>wave solutions</strong> are typically parabolic or hyperbolic PDEs. Here wave solutions are recognized by their form (variations of the formula <math class='maruku-mathml' display='inline' id='mathml_b5a1793be3592881fcd083287150d84b961fe2d8_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>vt</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>f(x-vt)</annotation></semantics></math> from above). Wave solutions can add up together linearly or not; in both cases the phenomenon is called <strong>superposition</strong>. Finite superpositions have many typical features (e.g. Lissajous figures). The superposition can stretch over infinite families of waves, then the sum passes into the integral and many periodic modes add up to something what is not periodic whatsoever, and may be even localized. One then talks about a <strong>wave packet</strong>. A wave packet can from far away look like a point particle. Wave packets can decay (damp) quickly as they propagate and in nonlinear situations can be unstable under collisions with other waves. In simple linear cases, the individual cases in the wave packet correspond to elements of a basis in a Hilbert space of functions, then the expression of a wave packet in terms of basic waves (say plane waves) amount to a case of <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier mode expansion</a>.</p>
 
 <p>In some special circumstances, the waves can preserve their features in nonlinear situations even asymptotically after collisions, in that case we talk about <a class='existingWikiWord' href='/nlab/show/soliton'>soliton</a>s. Solitons and multisolitons are especially well-known in gauge theories (including the 4d case localized in time, so called instantons) and in many <a class='existingWikiWord' href='/nlab/show/integrable+system'>integrable systems</a> like the sine-gordon, KdV and the nonlinear Schroedinger equation. The inverse scattering method in those cases can be interpreted as the existence of a certain nonlinear analogue of the Fourier transform (the spectral transform) for the nonlinear wave solutions.</p>
 
@@ -913,7 +985,41 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/oscillation'>oscillation</a>, <a class='existingWikiWord' href='/nlab/show/semiclassical+approximation'>semiclassical approximation</a>, <a class='existingWikiWord' href='/nlab/show/geometrical+optics'>geometrical optics</a>, <a class='existingWikiWord' href='/nlab/show/soliton'>soliton</a>, <a class='existingWikiWord' href='/nlab/show/Stokes+phenomenon'>Stokes phenomenon</a>, <a class='existingWikiWord' href='/nlab/show/Berry%27s+phase'>Berry&#39;s phase</a>.</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a>, <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/oscillation'>oscillation</a>,</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/semiclassical+approximation'>semiclassical approximation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometrical+optics'>geometrical optics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/soliton'>soliton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stokes+phenomenon'>Stokes phenomenon</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Berry%27s+phase'>Berry&#39;s phase</a>.</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>wave function</a></p>
+</li>
 </ul>
 
 <p>
@@ -924,14 +1030,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  5, 2013 21:02:19 
+  Revised on November  6, 2017 06:01:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.174.41.0)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wave/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wave/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
