--- a/pages/9485.html
+++ b/pages/9485.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,7 +308,124 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The <a class='existingWikiWord' href='/nlab/show/metric+space'>distance</a> between two <span class='newWikiWord'>crests<a href='/nlab/new/crests'>?</a></span> of a <a class='existingWikiWord' href='/nlab/show/wave'>wave</a>…</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='harmonic_analysis'>Harmonic analysis</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave'>wave</a>, <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></p>
+</li>
+</ul>
+
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of a distribution</a></p>
+</li>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+inversion+theorem'>Fourier inversion theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Paley-Wiener-Schwartz+theorem'>Paley-Wiener-Schwartz theorem</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></strong></p>
+
+<ul>
+<li>
+<p><span class='newWikiWord'>wavelet<a href='/nlab/new/wavelet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/curvelet'>curvelet</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/signal+processing'>signal processing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/time+series'>time series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/metric+space'>distance</a> between two <span class='newWikiWord'>crests<a href='/nlab/new/crests'>?</a></span> of a <a class='existingWikiWord' href='/nlab/show/wave'>wave</a>.</p>
+
+<h2 id='definition'>Definition</h2>
+
+<p>For <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> and</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>↦</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover></mrow></msup></mrow><annotation encoding='application/x-tex'>
+  \vec x \mapsto e^{2 \pi i \vec k \cdot \vec x}
+
+</annotation></semantics></math></div>
+<p>a <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a> with <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\vec k \in \mathbb{R}^n</annotation></semantics></math>, then its <em>wavelength</em> is the inverse of the <a class='existingWikiWord' href='/nlab/show/norm'>norm</a> of <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>≔</mo><mn>1</mn><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>k</mi><mo stretchy='false'>|</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \lambda \coloneqq 1/{\vert k\vert}
+  \,.
+
+</annotation></semantics></math></div>
+<p>The quotient <math class='maruku-mathml' display='inline' id='mathml_40a4ae0c36d45e5d8f6bfd0f5e3e0fcec47ecf97_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>k</mi><mo stretchy='false'>|</mo></mrow><mo>∈</mo><mi>S</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>k/{\vert k \vert} \in S(\mathbb{R}^n)</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction</a></em> of the <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/momentum'>momentum</a>, <a class='existingWikiWord' href='/nlab/show/energy'>energy</a></p>
+</li>
+</ul>
 
 <p>
 </p>
@@ -321,14 +438,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March 21, 2013 19:47:34 
+  Revised on November  6, 2017 06:14:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.121.180)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wavelength/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/wavelength" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wavelength" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
