--- a/pages/9162.html
+++ b/pages/9162.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,23 +308,117 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Frequency is a <a class='existingWikiWord' href='/nlab/show/number'>number</a> of occurences of a periodic event in <a class='existingWikiWord' href='/nlab/show/time'>time</a>.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='harmonic_analysis'>Harmonic analysis</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave'>wave</a>, <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></p>
+</li>
+</ul>
+
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of a distribution</a></p>
+</li>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+inversion+theorem'>Fourier inversion theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Paley-Wiener-Schwartz+theorem'>Paley-Wiener-Schwartz theorem</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></strong></p>
+
+<ul>
+<li>
+<p><span class='newWikiWord'>wavelet<a href='/nlab/new/wavelet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/curvelet'>curvelet</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/signal+processing'>signal processing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/time+series'>time series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>Frequency is a <a class='existingWikiWord' href='/nlab/show/number'>number</a> of occurences of a periodic <a class='existingWikiWord' href='/nlab/show/event'>event</a> in <a class='existingWikiWord' href='/nlab/show/time'>time</a>.</p>
 
 <p>For <a class='existingWikiWord' href='/nlab/show/wave'>waves</a>: number of wave crests at a given space point per time.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></p>
+</li>
+</ul>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on September  2, 2014 11:04:35 
+  Revised on November  6, 2017 06:14:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.121.189)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/frequency" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/frequency/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/frequency" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/frequency" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/frequency" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/frequency/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/frequency" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/frequency" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
